[package]
name = "platform-ext"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"

[build-dependencies]
windows-bindgen = "0.66.0"

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = [
  "CGColorSpace",
  "CGDataProvider",
  "CGDirectDisplay",
  "CGGeometry",
  "CGImage",
  "CGWindow",
] }
objc2-foundation = "0.3.2"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Foundation",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Graphics_Gdi",
  "Win32_System_WinRT",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"
windows-future = "0.3.2"
