[package]
name = "window-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui.workspace = true

raw-window-handle = "0.6.2"
thiserror = "2.0.17"

[target.'cfg(target_os="macos")'.dependencies]
objc2-app-kit = "0.3.2"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
