[package]
name = "mcp-auth-test-server"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", default-features = false, features = ["form", "http1", "json", "query", "tokio"] }
rmcp = { version = "1.8.0", features = ["auth", "macros", "server", "transport-streamable-http-server"] }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
url = "2.5.8"
